<resources>

    <string name="banner_ad_unit_id">ca-app-pub-5879820896125814/7129186536</string>


    <string name="app_name">CryptoCoins</string>
    <string name="calculator">CALCULATOR</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="amount">AMOUNT</string>
    <string name="calculate">CALCULATE</string>
    <string name="now">NOW</string>
    <string name="incomplete">INCOMPLETE</string>
    <string name="favorite">FAVORITE</string>
    <string name="trackmn">TRACK MN</string>
    <string name="wallet">WALLET ADDRESS</string>
    <string name="api">Select explorer Api to track</string>
    <string name="favourites">FAVOURITES</string>
    <string name="allcoins">ALL COINS</string>
    <string name="updating">Updating data ...</string>
    <string name="updated">Data Updated, Ready</string>
    <string name="mncount">MasterNode:</string>
    <string name="mnValue">Masternode Value:</string>
    <string name="waletadres">WALLET ADDRESS</string>
    <string name="wallet_api">WALLET API</string>
    <string name="mncost">How much coust your MN?</string>
    <string name="btc_currentTime">BTC at current time</string>
    <string name="coins">"Coins :  "</string>
    <string name="mon">$</string>
    <string name="lastChange">Last change :</string>
    <string name="mncoins">MN coins :</string>
    <string name="earned">Earned :</string>
    <string name="costmn">Cost MN :</string>
    <string name="overview">Overview</string>
    <string name="genericTitle">ALERT</string>
    <string name="addinfo">Are you sure to add new tracking?</string>
    <string name="deleteInfo">Are you sure to delete this tracking?</string>
    <string name="menu">MENU</string>
    <string name="privactpolicy">Privacy policy</string>
    <string name="contacus">Contact us</string>
    <string name="fianncuialR">Financial Resume</string>
    <string name="granTotal">Grand TOTAL:</string>
    <string name="dummy">--</string>
    <string name="invested">Invested:</string>
    <string name="balance">Global Balance :</string>
    <string name="wallets">Wallets :</string>
    <string name="masternodes">MASTER NODES</string>
    <string name="trackWallets">TRACK WALLETS</string>
    <string name="globalVal">GLOBAL BALANCE</string>
    <string name="resumeBalance">Resume Balance</string>
    <string name="track">Track</string>
    <string name="mnquestion">is a master Node?</string>
</resources>
