<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nicolasbahamon.cryptocoins.SettingsCoin">

    <ProgressBar
        android:id="@+id/progressBar6"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/alldata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView46"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addextradata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                    android:ems="10"
                    android:hint="---"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="@android:color/darker_gray" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/qr_icon" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView71"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/wallet_api"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                    android:ems="10"
                    android:hint="@string/api"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="@android:color/darker_gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView72"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mncost"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                        android:ems="10"
                        android:hint="$ USD"
                        android:inputType="numberDecimal"
                        android:textColor="#000000"
                        android:textColorHint="@android:color/darker_gray" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_weight="1"
        android:text="SAVE" />

</RelativeLayout>
